<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyumm_bringup</name>
  <version>0.0.0</version>
  <description>
    ROS2 (ament) bring-up launch files for the HYU-MM mobile manipulator:
    libsurvive vive backend + nrt vive/XDDP node + actual/nominal robot models
    + teleop + RViz.
  </description>
  <maintainer email="fndlrkdl94@gmail.com">robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vive_libsurvive_ros</exec_depend>
  <exec_depend>hyumm_nrt</exec_depend>
  <exec_depend>hyumm_description</exec_depend>
  <exec_depend>hyumm_vive</exec_depend>
  <exec_depend>hyumm_teleop</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
