<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyumm_nrt</name>
  <version>0.0.1</version>
  <description>
    ROS2 (ament) non-realtime bridge for the HYU-MM mobile manipulator. The
    hyumm_vive_xddp_node localizes from the libsurvive tracker topics (in-process
    ViveLocalizer), broadcasts TF, and bridges odom/cmd_vel/robot-state to the
    Xenomai RT controller over self-healing XDDP /dev/rtpN links (byte-identical
    binary packet:: schema, wire-compatible with the unchanged RT side).
  </description>
  <maintainer email="fndlrkdl94@gmail.com">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>hyumm_vive</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
