<?xml version="1.0"?>
<package format="2">
  <name>hyumm_vive</name>
  <version>0.0.1</version>
  <description>
    Header-only vive localization library (ViveLocalizer). Anchors the libsurvive
    tracker poses onto vive_world (fixed reference tracker) and computes the
    mobile-base center pose + twist. Consumed in-process by the hyumm_nrt node;
    no ROS nodes or topic exchange of its own.
  </description>
  <maintainer email="fndlrkdl94@gmail.com">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
</package>
