<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ira_laser_tools</name>
  <version>0.0.0</version>
  <description>
    ROS2 (ament) laser tools: laserscan_multi_merger (merge several LaserScan
    topics into one PointCloud2 + LaserScan) and laserscan_virtualizer (project a
    PointCloud2 into virtual LaserScans per frame). Dependency-free port (tf2 +
    sensor_msgs PointCloud2 iterators; no laser_geometry/PCL/dynamic_reconfigure).
  </description>
  <maintainer email="fndlrkdl94@gmail.com">robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
